native/include/jyppx/cuda/runtime.h

JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_choose_device(const JYPPX_CudaDeviceSelectionRequirements* requirements, int32_t* out_device);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_array_get_plane(JYPPX_CudaArray* array, uint32_t plane_index, JYPPX_CudaArray** out_plane);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_array_get_info(JYPPX_CudaArray* array, JYPPX_CudaArrayInfo* out_info);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_array_get_memory_requirements(JYPPX_CudaArray* array, int32_t device, JYPPX_CudaArrayMemoryRequirements* out_requirements);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_array_get_sparse_properties(JYPPX_CudaArray* array, JYPPX_CudaArraySparseProperties* out_properties);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_ctx_reset_persisting_l2_cache(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_child_graph_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_dependencies_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_dependencies_v2_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_empty_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_event_record_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_event_wait_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_external_semaphores_signal_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_external_semaphores_wait_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_host_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_kernel_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_mem_alloc_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_memcpy_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_memcpy_node1_d_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_memcpy_node_from_symbol_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_memcpy_node_to_symbol_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_mem_free_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_memset_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_add_node_v2_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_child_graph_node_get_graph_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_conditional_handle_create_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_conditional_handle_create_v2_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_debug_dot_print_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_destroy_node_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_event_record_node_get_event_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_event_record_node_set_event_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_event_wait_node_get_event_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_event_wait_node_set_event_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_child_graph_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_event_record_node_set_event_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_event_wait_node_set_event_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_external_semaphores_signal_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_external_semaphores_wait_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_get_id_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_host_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_cuda_graph_exec_kernel_node_set_params_deferred(void);
/* END CUDA TWENTY-FIFTH BATCH GRAPH TOPOLOGY DECLARATIONS */

/* BEGIN CUDA FIFTIETH BATCH TEXTURE AND SURFACE ARRAY OWNERS */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_surface_object_create_array_owner_safe(JYPPX_CudaArray* array, JYPPX_CudaSurfaceObject** out_surface);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_texture_object_create_array_owner_safe(JYPPX_CudaArray* array, const JYPPX_CudaTextureDescriptor* descriptor, JYPPX_CudaTextureObject** out_texture);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_texture_object_create_array_owner_v2_safe(JYPPX_CudaArray* array, const JYPPX_CudaTextureDescriptor* descriptor, JYPPX_CudaTextureObject** out_texture);
/* END CUDA THIRTY-SEVENTH BATCH GRAPH BOUNDARY DECLARATIONS */

/* BEGIN CUDA THIRTY-EIGHTH BATCH OTHER BOUNDARY DECLARATIONS */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_create_surface_object_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_create_texture_object_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_create_texture_object_v2_deferred(void);